			wxFormBuilder ChangeLog
************************************************************************
12/14/2007 Version 3.00.51 (RC4)
^ No longer creating a temporary file on disk for the XRC Preview.
* FS#247 - "Invalid macro generated by wxFB."
* FS#248 - "Property choices of wxChoice: Strings with single quotes are truncated"
  This forced incrementing the .fbp version to 1.9
* FS#249 - "Paste From Clipboard requires Administrator privileges on Vista"
* FS#252 - "OnSize event bug in RC3 for wxPanel."
* FS#250 - "Image File Browser default filter should be "All Image Files""
* FS#251 - "UNC paths for images are not supported."
* FS#254 - "code duplicating."
+ FS#257 - "wxStaticBox inside a wxStaticBoxSizer lacks an id"
* FS#261 - "wxMenuItem has no 'permission' property"
* FS#265 - "wxID_PREFERENCES should not be redefined"
* FS#269 - "[OS X] menu items shown at wrong place in menu bar" (patch from Auria)
* FS#263 - "Frame not resized correctly in designer when menubar/toolbar/statusbar present"
* FS#267 - "[OS X] radio button groups cause crash"
* FS#276 - "Creation of two event handlers with different protoypes" (patch from Joel Low)
* FS#279 - "missing Append() for wxMenuItem" (patch from denk_mal)
* FS#262 - "Centering of Frame/Dialog incorrect when frame/dialog size not pre-defined"
* FS#258 - "wxRadioButton enabled value not respected" (patch from Joel Low)
* FS#256 - "Gererating Inherited class in different folder output malformed code"
* FS#268 - "[OS X] crashes upon termination" (patch from Auria)
* FS#277 - "crash on using icon/bitmap resource"
* FS#266 - "loading toolbar images from resource"
* FS#259 - "Toolbar tools' icon code does not respect toolbar size"
* FS#282 - "empty clipboard after closing wxformbuilder"
* FS#285 - "Whitespace event handler causes bad code"
* FS#283 - "possiblity to set the selection of a wxChoice"
+ Added stack trace dialog on fatal error.

09/27/2007 Version 3.00.50 (RC3)
* FS#234 - "wxFrame name parameter not available."